# sharesafe-client

./: LICENSE  README.md  build.sh  sharesafe-client.cabal  stack.yaml
app/: Main.hs
bridge/: Main.hs
src/Prime/Client/: Monad.hs
